<resources>
    <string name="app_name">Memento</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="nav_friends">Friends</string>
    <string name="nav_blocked_users">Blocked users</string>
    <string name="nav_create_event">New event</string>
    <string name="nav_user_account_settings">Account settings</string>
    <string name="nav_app_settings">Application settings</string>
    <string name="logout">Logout</string>
    <string name="settings_user_name">User name</string>
    <string name="settings_user_surname">User surname</string>
    <string name="settings_change_profile_pic">Tap to change</string>
    <string name="settings_user_login">Login</string>
    <string name="settings_user_email">Email</string>
    <string name="settings_user_password">Password</string>
    <string name="settings_apply">Apply</string>
    <string name="settings_cancel">Cancel</string>
</resources>
